--- a/config/i3/config
+++ b/config/i3/config
@@ -159,7 +159,8 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-set $Locker i3lock -i /home/nigel/Pictures/Backgrounds/Cortex-Wallpaper-Logo.png && sleep 1
+#set $Locker "i3lock -i $([[ -e /home/nigel/Pictures/Backgrounds/Cortex-Wallpaper-Logo-desktop.png ]] && { echo \\"/home/nigel/Pictures/Backgrounds/Cortex-Wallpaper-Logo-desktop.png\\" ; } || \\{ echo \\"/home/nigel/Pictures/Backgorunds/Cortex-Wallpaper-Logo.png\\"; \\};) && sleep 1" 
+set $Locker i3lock -i /home/nigel/Pictures/Backgrounds/Cortex-Wallpaper-Logo-lock.png && sleep 1
 
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
@@ -214,6 +215,11 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #d
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute 2 toggle
 
+bindsym XF86AudioPlay exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause"
+bindsym XF86AudioPrev exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous"
+bindsym XF86AudioNext exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"
+
+
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
@@ -225,7 +231,7 @@ bindsym Print exec scrot -e 'mv $f /tmp/ && gimp /tmp/$f
 # finds out, if available)
 bar {
         position top
-        status_command i3status -c ~/.config/i3status/config.$(hostname -s)
+        status_command i3status -c ~/.config/i3status/config.$(hostname -s) | ~/git/i3spotifystatus/pystatus.py
         font pango:DejaVu Sans Mono, FontAwesome 10
         strip_workspace_numbers yes
         tray_output eDP1
