--- a/config/i3/config
+++ b/config/i3/config
@@ -63,7 +63,7 @@ bindsym $mod+Shift+q kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id j4-dmenu-desktop
+bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu="dmenu -i -nf '#000000' -nb '#F4800D' -sb '#5F3205' -sf '#F5F5F5' -fn 'monospace:pixelsize=15' -p 'run>'"
 
 # change focus
 bindsym $mod+j focus left
@@ -216,9 +216,9 @@ bindsym Mod1+Shitf+Tab focus left
 bindsym $mod+Tab workspace back_and_forth
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q -D pulse set Master 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q -D pulse set Master 5%-
+bindsym XF86AudioMute exec --no-startup-id amixer -q -D pulse set Master toggle
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute 2 toggle
 
 bindsym XF86AudioPlay exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause"
@@ -230,7 +230,7 @@ bindsym XF86AudioNext exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
 
-bindsym Print exec scrot -e 'mv $f /tmp/ && gimp /tmp/$f
+bindsym Print exec "scrot -e 'mv $f /tmp/ && gimp /tmp/$f'"
 
 
 # Start i3bar to display a workspace bar (plus the system information i3status
