--- a/config/i3/config
+++ b/config/i3/config
@@ -166,7 +166,8 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 #set $Locker "i3lock -i $([[ -e /home/nigel/Pictures/Backgrounds/Cortex-Wallpaper-Logo-desktop.png ]] && { echo \\"/home/nigel/Pictures/Backgrounds/Cortex-Wallpaper-Logo-desktop.png\\" ; } || \\{ echo \\"/home/nigel/Pictures/Backgorunds/Cortex-Wallpaper-Logo.png\\"; \\};) && sleep 1"
 #set $Locker i3lock -i /home/nigel/Pictures/Backgrounds/Cortex-Wallpaper-Logo-lock.png && sleep 1
-set $Locker ~/.i3/i3lock-fancy-multimonitor/lock --no-text -b=0x4 && sleep 1
+#set $Locker ~/.i3/i3lock-fancy-multimonitor/lock --no-text -b=0x4 --ignore-empty-password && sleep 1
+set $Locker i3lock --ignore-empty-password --image ~/Pictures/lock.png && sleep 1
 
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
@@ -212,7 +213,7 @@ bindsym $mod+r mode "resize"
 
 # Allow alt-tab to move around
 bindsym Mod1+Tab focus right
-bindsym Mod1+Shitf+Tab focus left
+bindsym Mod1+Shift+Tab focus left
 bindsym $mod+Tab workspace back_and_forth
 
 # Pulse Audio controls
@@ -231,6 +232,7 @@ bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
 
 bindsym Print exec "scrot -e 'mv $f /tmp/ && gimp /tmp/$f'"
+bindsym Shift+Print exec "scrot -s -e 'mv $f /tmp/ && gimp /tmp/$f'"
 
 
 # Start i3bar to display a workspace bar (plus the system information i3status
