--- a/config/i3/config
+++ b/config/i3/config
@@ -63,7 +63,8 @@ bindsym $mod+Shift+q kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu="dmenu -i -nf '#000000' -nb '#F4800D' -sb '#5F3205' -sf '#F5F5F5' -fn 'monospace:pixelsize=15' -p 'run>'"
+# bindsym $mod+d exec --no-startup-id j4-dmenu-desktop --dmenu="dmenu -i -nf '#000000' -nb '#F4800D' -sb '#5F3205' -sf '#F5F5F5' -fn 'monospace:pixelsize=15' -p 'run>'" --usage-log="/home/$USER/.j4-usage-log"
+bindsym $mod+d exec --no-startup-id rofi -show combi -modi combi
 
 # change focus
 bindsym $mod+j focus left
