Clean up i3 back and forth

--- a/config/i3/config
+++ b/config/i3/config
@@ -144,6 +144,10 @@ bindsym $mod+8 workspace $workspace8
 bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
 
+# Push the same workspace again to go back
+workspace_auto_back_and_forth yes
+bindsym $mod+Tab workspace back_and_forth
+
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $workspace1
 bindsym $mod+Shift+2 move container to workspace $workspace2
@@ -216,7 +220,7 @@ bindsym $mod+r mode "resize"
 # Allow alt-tab to move around
 bindsym Mod1+Tab focus right
 bindsym Mod1+Shift+Tab focus left
-bindsym $mod+Tab workspace back_and_forth
+
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q -D pulse set Master 5%+
