--- a/config/i3/config
+++ b/config/i3/config
@@ -187,6 +187,7 @@ mode "$mode_system" {
     # back to normal: Enter or Escape
     bindsym Return mode "default"
     bindsym Escape mode "default"
+    bindsym Control+g mode "default"
 }
 
 bindsym $mod+Escape mode "$mode_system"
@@ -213,6 +214,7 @@ mode "resize" {
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
+        bindsym Control+g mode "default"
 }
 
 bindsym $mod+r mode "resize"
