Move to light for backlight control

--- a/config/i3/config
+++ b/config/i3/config
@@ -239,8 +239,11 @@ bindsym XF86AudioNext exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer
 
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
+bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5
+
+# bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
+# bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
 
 bindsym Print exec "scrot -e 'mv $f /tmp/ && gimp /tmp/$f'"
 bindsym Shift+Print exec "scrot -s -e 'mv $f /tmp/ && gimp /tmp/$f'"
