--- a/config/rofi/config
+++ b/config/rofi/config
@@ -1,6 +1,6 @@
 rofi.width: 90
 rofi.combi-modi: window,drun,ssh
-rofi.modi: combi
+rofi.modi: combi,window,drun,ssh
 rofi.case-sensitive: false
 rofi.hide-scrollbar: true
 rofi.theme: solarized_alternate
