--- a/config/i3/config
+++ b/config/i3/config
@@ -28,6 +28,8 @@ exec --no-startup-id autorandr -c
 
 exec --no-startup-id clipster -d
 
+exec --no-startup-id ~/bin/headset-charge-indicator.sh
+
 bindsym $mod+c exec ~/git/roficlip/roficlip
 
 exec --no-startup-id spotify
@@ -185,7 +187,7 @@ set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) re
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
+    bindsym s exec --no-startup-id systemctl suspend, mode "default"
     bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
     bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
