--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,13 @@
-# Set the prefix to C-z instead of C-b; C-z
-set -g prefix C-o
+# Set the prefix to C-\ instead of C-b; C-\
 unbind C-b
-bind-key -r C-o send-prefix
+set -g prefix 'C-\'
 
 set -g base-index 1 # Start window index #s at 1
 set -g default-terminal "xterm-256color"
 
 set-window-option -g mode-keys emacs
 set-window-option -g monitor-activity on
-set-option -g mouse-select-pane on
+set -g mouse on
 set-option -g visual-activity on
 
-set-window-option -g window-status-current-bg red
-set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-style bg=red,fg=white
